# WEB

./: LICENSE
HW/HW01/: DisplayStrategy.py  __main__.py  logs.txt
HW/HW10/hw10/authors/migrations/: 0001_initial.py  0002_author_user.py
HW/HW10/hw10/hw10/: settings.py  urls.py
HW/HW10/hw10/quotes/migrations/: 0002_quote_author.py
HW/HW11/: main.py  pyproject.toml  seeds.py
HW/HW11/migrations/: env.py
HW/HW11/migrations/versions/: 4130c081de72_init.py
HW/HW11/src/: schemas.py
HW/HW11/src/database/: db.py  models.py
HW/HW11/src/repository/: contacts.py
HW/HW11/src/routes/: contacts.py
HW/HW12/migration/versions/: dc8b56b7cffc_initial_migration.py
HW/HW12/src/: schemas.py
HW/HW12/src/database/: models.py
HW/HW12/src/routes/: contacts.py
HW/HW13/: main.py  pyproject.toml
HW/HW13/migration/versions/: 2182480b4205_initial_migration.py
HW/HW13/src/repository/: contacts.py
HW/HW13/src/routes/: auth.py
HW/HW13/src/services/: auth.py  mail.py
HW/HW13_01/: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml
HW/HW13_01/migration/: env.py
HW/HW13_01/migration/versions/: 1d2d171ef0c6_initial_migration.py  8517fd20b82e_initial_migration.py
HW/HW13_01/src/database/: db.py  models.py
HW/HW13_01/src/repository/: contacts.py
HW/HW13_01/src/routes/: contacts.py  notes.py  users.py
HW/HW13_01/src/services/: auth.py  mail.py
HW/HW13_02/: pyproject.toml
HW/HW13_02/hw10/: .env
HW/HW13_02/hw10/hw10/: settings.py
HW/HW13_02/hw10/quotes/: models.py  views.py
HW/HW13_02/hw10/quotes/migrations/: 0001_initial.py  0003_author_alter_quote_author.py  0004_alter_quote_author_tag_user_delete_author.py  0005_tag_tag_of_user.py
HW/HW13_02/hw10/users/: forms.py  urls.py  views.py
HW/HW14/: pyproject.toml
HW/HW14/src/: schemas.py  settings.py
HW/HW14/src/docs/source/: conf.py  index.rst
HW/HW14/src/repository/: contacts.py  notes.py  tags.py  users.py
HW/HW14/src/routes/: auth.py  contacts.py  notes.py  tags.py  users.py
HW/HW14/src/services/: auth.py  mail.py
HW/HW_02/FinalProject/: logs.txt
HW/HW_02/FinalProject/pa/Scripts/: activate.bat
HW/HW_03/03_02/: main.py
HW/HW_04/: main.py
HW/HW_06/HW_06/: HW.db  pyproject.toml  select_01.py  select_02.py  select_04.py  select_05.py  select_06.py  select_08.py  select_09.py  select_10.py
HW/HW_07/: alembic.ini  db.py  init.py  main.py  models.py  pyproject.toml
HW/HW_07/alembic/: env.py
HW/HW_07/alembic/versions/: b0583ebfc1cb_init.py
HW/HW_07_v3/: alembic.ini  main.py  models.py  my_select.py  pyproject.toml  seeds.py
HW/HW_07_v3/alembic/: env.py
HW/HW_07_v3/alembic/versions/: 617f04a63e92_init.py
HW/HW_08/: concumer.py  connect.py  models.py  producer.py  pyproject.toml  seeds.py
HW/HW_09/: app.py  authors.json  connect.py  hw9.py  models.py  pyproject.toml  seeds.py
HW/HW_09Scrapy/: pyproject.toml
HW/HW_09Scrapy/test_spyder/test_spyder/: items.py
HW/HW_10/: pyproject.toml
HW/HW_10/mysite/: db.sqlite3
HW/HW_10/mysite/mysite/: settings.py
HW/HW_10/mysite/polls/: urls.py  views.py
HW/HW_10/mysite/polls/migrations/: 0001_initial.py
HW/HW_10_02/: pyproject.toml
HW/HW_10_02/notes/notes/: settings.py
HW/HW_10_02/notes/quotes/: models.py
HW/HW_10django/: pyproject.toml
HW/HW_10django/hw_project/authors/: models.py
HW/HW_10django/hw_project/hw_project/: __init__.py  settings.py  urls.py
HW/HW_10django/hw_project/quotes/: admin.py  models.py  urls.py  utils.py  views.py
HW/HW_10django/hw_project/quotes/migrations/: 0001_initial.py  0002_alter_author_born_date.py  0003_alter_tag_name.py  0004_alter_author_born_date.py  0005_alter_author_born_date.py
HW/HW_10django/hw_project/quotes/templates/quotes/: author.html  base.html  index.html
HW/HW_10django/hw_project/quotes/templatetags/: extract.py
HW/HW_10django/hw_project/users/: views.py
HW/HW_10django/hw_project/users/templates/users/: login.html
HW/HW_10django/hw_project/utils/: add_quotes_to_mongo.py  migration.py
HW/HW_10django/utils/: add_quotes_to_mongo.py
HW_02/FinalProject/: info.py
HW_02/FinalProject/pa/Scripts/: activate
HW_03/03_01/: main.py
HW_03/03_01/file/: main.py
HW_03/03_02/: main.py
HW_04/: main.py  socket_client.py  socket_server.py
HW_04/storage/: data.json
HW_05/: main.py
HW_06/HW_06/: HW.db  create.py  insert.py  main.py  select_03.py  select_07.py
HW_07/: insert.py  main.py  pyproject.toml
HW_07/conf/: db.py
HW_07/hw/: models.py
