[tool.poetry]
name = "hw-07"
version = "0.1.0"
description = "HW_07"
authors = ["AndriiRohovyk <77483613+AndreyRogovik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
faker = "^19.13.0"
alembic = "^1.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
