[tool.poetry]
name = "hw-09scrapy"
version = "0.1.0"
description = ""
authors = ["AndriiRohovyk <77483613+AndreyRogovik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
