[tool.poetry]
name = "hw-10django"
version = "0.1.0"
description = ""
authors = ["AndriiRohovyk <77483613+AndreyRogovik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
pymongo = "3.12.0"
psycopg2 = "^2.9.9"
bson = "0.5.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
