[tool.poetry]
name = "hw-06"
version = "0.1.0"
description = ""
authors = ["AndriiRohovyk <77483613+AndreyRogovik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^19.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
